deploy/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: inanh24h
  labels:
    app.kubernetes.io/part-of: inanh24h
