deploy/k8s/11-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: inanh24h
  labels:
    app: api
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
