deploy/k8s/21-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: inanh24h
  labels:
    app: web
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
